# dictionary-api

./: .env  README.md  docker-compose.yaml  dockerfile  manage.py  pyproject.toml
app/: config.py  db.py  models.py  oxford.py  server.py  worker.py
app/templates/: index.html
tests/: words.txt
